cluster/apps/external/qBittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qBittorrent
  namespace: external
spec:
  type: ExternalName
  externalName: 192.168.1.147
  ports:
    - port: 8080
