cluster/apps/external/qBittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon:
  name: qBittorrent
  namespace: external
spec:
  rules:
  - host: torrent.witlinserver.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qBittorrent
            port:
              number: 8080
  tls:
  - hosts:
    - torrnet.witlinserver.com
    secretName: qBittorrent-cert
